# VMemModifier

./: .gitignore  VMemModifier.sln  VMemReader.sln
UnitTests/: TestCore.cs  UnitTests.csproj
VMemModifierConsole/: CommandFactory.cs  ConsoleInterface.cs  HelpCommand.cs  HelpResource.Designer.cs  HelpResource.resx  SaveMemDumpCommand.cs  SearchCommand.cs  VMemModifierConsole.csproj  WriteCommand.cs
VMemModifierConsole/Properties/: launchSettings.json
VMemModifierConsole/Resources/: HelpFile.txt
VMemModifierCore/: DLLInjector.cs  DataFormatter.cs  Log.cs  SearchAlgorithm.cs  VMemStream.cs  VMemStreamNative.cs
VMemModifierDll/: CMakeLists.txt
VMemModifierDll/source/: main.cpp
VMemModifierGUI/: VMemReaderGUI.sln
VMemModifierGUI/VMemModifierGUI/: App.axaml.cs  ErrorDialog.axaml  ErrorDialog.axaml.cs  IdListControl.axaml  IdListControl.axaml.cs  IdListElementControl.axaml  IdListElementControl.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  OutputControl.axaml  OutputControl.axaml.cs  SearchDialog.axaml  SearchDialog.axaml.cs  ToolBar.axaml  ToolBar.axaml.cs  VMemModifierGUI.csproj  VMemModifireConsole.cs  WindowManager.cs
VMemReaderConsole/: AbstractCommand.cs  CloseCommand.cs  CommandFactory.cs  CreateCommand.cs  HelpCommand.cs  HelpResource.Designer.cs  InjectCommand.cs  Program.cs  ReadCommand.cs  SearchCommand.cs  VMemReaderConsole.csproj  WriteCommand.cs
VMemReaderCore/: DLLInjector.cs  Data.cs  DataFormatter.cs  Log.cs  SearchAlgorithm.cs  VMemManager.cs  VMemReaderCore.csproj  VMemStream.cs  VMemStreamNative.cs
VMemReaderDll/: CMakeLists.txt
(+17 files in other folders)
